...
        android:title="@string/nav_albums" />
    <item
        android:id="@+id/artistListFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_artists" />
    <item
        android:id="@+id/collectorListFragment"
        android:icon="@drawable/ic_group"
        android:title="@string/nav_collectors" />
</menu>

